workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/CriticaIntegracao__x.object-meta.xml
<CustomObject>
    <description>Tabela de resultado de integrações exposta pelo Heroku</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$resultadointegracao</externalName>
    <label>Crítica de integração</label>
    <pluralLabel>Críticas de integrações</pluralLabel>
</CustomObject>