workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/ano__c.field-meta.xml
<CustomField>
    <fullName>ano__c</fullName>
    <description>ano</description>
    <externalDeveloperName>ano</externalDeveloperName>
    <label>Ano</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>