workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/AreaIntegracao__c.field-meta.xml
<CustomField>
    <fullName>AreaIntegracao__c</fullName>
    <externalDeveloperName>area</externalDeveloperName>
    <label>Área de integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>