workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/chave__c.field-meta.xml
<CustomField>
    <fullName>chave__c</fullName>
    <label>Chave</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>