workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <externalDeveloperName>chave</externalDeveloperName>
    <label>Contrato</label>
    <length>255</length>
    <referenceTargetField>Contract.IdExterno__c</referenceTargetField>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Críticas de integrações</relationshipLabel>
    <relationshipName>CriticasIntegracoes</relationshipName>
    <type>IndirectLookup</type>
</CustomField>