workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/devolutiva__c.field-meta.xml
<CustomField>
    <fullName>devolutiva__c</fullName>
    <description>devolutiva</description>
    <externalDeveloperName>devolutiva</externalDeveloperName>
    <label>Devolutiva</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>