workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/empresa__c.field-meta.xml
<CustomField>
    <fullName>empresa__c</fullName>
    <description>empresa</description>
    <externalDeveloperName>empresa</externalDeveloperName>
    <label>Empresa</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>