workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/endosso__c.field-meta.xml
<CustomField>
    <fullName>endosso__c</fullName>
    <description>endosso</description>
    <externalDeveloperName>endosso</externalDeveloperName>
    <label>Endosso</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>