workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <description>endpoint</description>
    <externalDeveloperName>endpoint</externalDeveloperName>
    <label>Endpoint</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>