workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/idintegracao__c.field-meta.xml
<CustomField>
    <fullName>idintegracao__c</fullName>
    <description>idintegracao</description>
    <externalDeveloperName>idintegracao</externalDeveloperName>
    <label>Id de integração</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>