workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/idpagamento__c.field-meta.xml
<CustomField>
    <fullName>idpagamento__c</fullName>
    <description>idpagamento</description>
    <externalDeveloperName>idpagamento</externalDeveloperName>
    <label>Id pagamento</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>