workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/lote__c.field-meta.xml
<CustomField>
    <fullName>lote__c</fullName>
    <label>Lote</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>