workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/operacao__c.field-meta.xml
<CustomField>
    <fullName>operacao__c</fullName>
    <description>operacao</description>
    <externalDeveloperName>operacao</externalDeveloperName>
    <label>Operação</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>