workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/parceiro__c.field-meta.xml
<CustomField>
    <fullName>parceiro__c</fullName>
    <description>parceiro</description>
    <externalDeveloperName>parceiro</externalDeveloperName>
    <label>Parceiro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>