workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/ramo__c.field-meta.xml
<CustomField>
    <fullName>ramo__c</fullName>
    <description>ramo</description>
    <externalDeveloperName>ramo</externalDeveloperName>
    <label>Ramo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>