workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/reprocessamento__c.field-meta.xml
<CustomField>
    <fullName>reprocessamento__c</fullName>
    <description>reprocessamento</description>
    <externalDeveloperName>reprocessamento</externalDeveloperName>
    <label>Reprocessamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>