workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/TipoIntegracao__c.field-meta.xml
<CustomField>
    <fullName>TipoIntegracao__c</fullName>
    <externalDeveloperName>tipointegracao</externalDeveloperName>
    <label>Tipo de integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>