workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/fields/tipoobjeto__c.field-meta.xml
<CustomField>
    <fullName>tipoobjeto__c</fullName>
    <description>tipoobjeto</description>
    <externalDeveloperName>tipoobjeto</externalDeveloperName>
    <label>Tipo de objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>