workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>empresa__c</columns>
    <columns>sucursal__c</columns>
    <columns>ramo__c</columns>
    <columns>apolice__c</columns>
    <columns>endosso__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>