workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/listViews/ArquivoParceiro.listView-meta.xml
<ListView>
    <fullName>ArquivoParceiro</fullName>
    <columns>ExternalId</columns>
    <columns>parceiro__c</columns>
    <columns>lote__c</columns>
    <columns>operacao__c</columns>
    <columns>dataintegracao__c</columns>
    <columns>idintegracao__c</columns>
    <columns>payloaderro__c</columns>
    <columns>status__c</columns>
    <columns>devolutiva__c</columns>
    <columns>tipoobjeto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tipoobjeto__c</field>
        <operation>equals</operation>
        <value>SF:ArquivoParceiro</value>
    </filters>
    <label>Arquivo do Parceiro</label>
</ListView>