workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/listViews/OrdemPagamento.listView-meta.xml
<ListView>
    <fullName>OrdemPagamento</fullName>
    <columns>ExternalId</columns>
    <columns>idpagamento__c</columns>
    <columns>dataintegracao__c</columns>
    <columns>idintegracao__c</columns>
    <columns>payloaderro__c</columns>
    <columns>status__c</columns>
    <columns>devolutiva__c</columns>
    <columns>tipoobjeto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tipoobjeto__c</field>
        <operation>equals</operation>
        <value>SF:OrdemPagamento</value>
    </filters>
    <label>Ordem de Pagamento</label>
</ListView>