workspace-sf/force-app/main/default/objects/CriticaIntegracao__x/listViews/Sinistro.listView-meta.xml
<ListView>
    <fullName>Sinistro</fullName>
    <columns>ExternalId</columns>
    <columns>empresa__c</columns>
    <columns>ramo__c</columns>
    <columns>ano__c</columns>
    <columns>dataintegracao__c</columns>
    <columns>idintegracao__c</columns>
    <columns>payloaderro__c</columns>
    <columns>status__c</columns>
    <columns>devolutiva__c</columns>
    <columns>tipoobjeto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tipoobjeto__c</field>
        <operation>equals</operation>
        <value>string</value>
    </filters>
    <label>Sinistro</label>
</ListView>